# 2024-spring-ab-python-ads-HW-12

./: README.md  app.py  consumer.py  docker-compose.yaml  predict.py  producer.py  pyproject.toml  recommendation_api.py  redis_client.py  streamlit.py
api/: Dockerfile  app.py  predict.py  requirements.txt
frontend/: Dockerfile  streamlit.py
kafka/: consumer.py  producer.py
tests/: app_test.py
