[tool.poetry]
name = "hw112"
version = "0.1.0"
description = "aaa"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.3"
numpy = "^1.26.4"
kafka = "^1.3.5"
logging = "^0.4.9.6"
typing = "^3.10.0.0"
river = "^0.21.1"
faiss-cpu = "^1.8.0"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
nltk = "^3.8.1"
redis = "^5.0.4"
streamlit = "^1.33.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
